--- a/my-profile/style.css
+++ b/my-profile/style.css
@@ -9,9 +9,13 @@
   }
 
   .image{
-    width: 50%;
-    padding-left: 200px;
-    padding-top: 50px;
+    width: 40%;
+    padding-left: 20px;
+    padding-top: 20px;
+  }
+
+  .inline-images {
+    display: inline-block;
   }
  
   nav{
