--- a/my-profile/style.css
+++ b/my-profile/style.css
@@ -95,3 +95,17 @@
   font-size: medium;
   font-family:cursive
 }
+
+.p1{
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: larger;
+}
+
+.images{
+  width: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
